# xdutools

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
xdutools/: _cli.py  cli.py  login.py  schedule.py  score.py
xdutools/apps/: grade.py  schedule.py
xdutools/auth/: cookies.py  ehall.py  ids.py  nic.py  types.py  utils.py
